# WelkeDeelauto

./: .envrc  .gitignore  Makefile  README.md  flake.nix
backend/: Dockerfile  poetry.toml  pyproject.toml  repository.py  web.py
backend/cache/: store.py
backend/models/: interface.py  models.py
backend/providers/: greenwheels.py  hely.py  mywheels.py  owncar.py  sharenow.py  sixtshare.py  snappcar.py
frontend/: .env.dist  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.js  manifest.js  page.js  robots.txt  sitemap.js
frontend/app/about/: page.js
frontend/app/components/: footer.js  header.js  home.js  message.js  options.js  provider-results.js  routing-input.js  sliders.js  vehicles-skeleton.js  vehicles.js
frontend/app/css/: global.css
frontend/app/map-styles/: flat-pale.json
frontend/app/util/: util.js
frontend/public/: manifest.json
infrastructure/: .gitignore  api-gateway.tf  backend.tf  dns.tf  frontend.tf  provider.tf  routing.tf  terraform.tf  variables.tf
